--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -21,7 +21,7 @@
     <% end %>
     <div id="view_article">
        <% if @article.present? %>
-            <div class='article_box'>
+            <div class='card_Box'>
             <div style="display: block; width: 100%; margin-bottom: 10px;">
                 <h1 class='title' dir="rtl" style="margin-bottom: 10px;"><%= @article.header %></h3>
                 <div style="display: flex; justify-content: space-between;">
