--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <body>
     <div id="app">
       <%= render 'layouts/header' %>
-      <div id="page_content">
+      <div id="page__content">
         <%= yield %>
       </div>
     </div>
