--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -84,31 +84,11 @@ body {
     }
 }
 
-#toggle_menu_button {
-    cursor: pointer;
-    position: absolute;
-    right: 19px;
-    top: 18px;
-    width: 45px;
-    height: 45px;
-    border-radius: 7px;
-    padding: 3px;
-    padding-top: 2px;
-    z-index: 85;
-    span {
-        width: 100%;
-        height: 4px;
-        display: block;
-        background-color: #003cff;
-        margin: 7px 0;
-    }
-}
-
 @media screen and (min-width: 700px) {
     .navbar {
         display: flex;
     }
-    #bottom_navigator {
+    .bottom_navigator {
         display: none;
     }
 }
@@ -122,12 +102,12 @@ body {
         text-align: center;
         left: 0;
     }
-    #bottom_navigator {
+    .bottom_navigator {
         display: block;
     }
 }
 
-#bottom_navigator {
+.bottom_navigator {
     position: fixed;
     width: 100%;
     right: 0;
@@ -136,7 +116,7 @@ body {
     height: 65px;
     background: #252b33;
     z-index: 80;
-    #bottom_navigator_nav {
+    .bottom_navigator_nav {
         display: flex;
         width: 100%;
         height: 100%;
@@ -161,7 +141,6 @@ body {
                 bottom: 3px;
                 font-size: 13px;
             }
-            &.active {}
             &.item-center {
                 color: #fff;
                 &.active {
@@ -182,7 +161,7 @@ body {
     }
 }
 
-#page_content {
+#page__content {
     margin-top: $header_height;
 }
 
