persian_date & slug concerns added

--- a/app/assets/stylesheets/inputs.scss
+++ b/app/assets/stylesheets/inputs.scss
@@ -91,6 +91,7 @@
     display: block;
     position: relative;
     padding-right: 35px;
+    padding-top: 1px;
     margin-bottom: 12px;
     cursor: pointer;
     font-size: 14px;
