--- a/app/views/dashboard/new_article.html.erb
+++ b/app/views/dashboard/new_article.html.erb
@@ -21,7 +21,7 @@
 			</div>
 
             <div style="width: 100%; display: block; text-align: left;">
-                <%= f.submit 'ثبت مقاله', :class => "btn btn-primary btn-large-padding" %>
+                <%= f.submit 'ثبت مقاله', :class => "btn btn-primary btn-large-padding", data: { disable_with: "درحال ارسال فرم" } %>
             </div>
         <% end %>
     </div>
