--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -33,8 +33,8 @@
 <% end %>
 
 <div class="input">
-    <%= f.label :price, 'قیمت دوره' %>
-    <%= f.text_field :price, :dir => :ltr %>
+    <%= f.label :price, 'قیمت دوره (تومان)' %>
+    <%= f.number_field :price, :dir => :ltr, :only_integer => true %>
     <small>اگر دوره رایگان است قیمت آن را صفر قرار دهید</small>
 </div>
 
