--- a/app/views/dashboard/new_course.html.erb
+++ b/app/views/dashboard/new_course.html.erb
@@ -1,38 +1,32 @@
 <div class="content_box">
-    <h4 class="header">دوره جدید</h4>
+    <% if created_successfully != nil && !created_successfully %>
+        <h4 class="header">دوره جدید</h4>
 
-    <div class="form">
-        <%= form_for @course, url: {:action => 'submit_new_course'}, method: :post do |f| %>
-            
-            <%= render 'courses/form', f: f, preview_image: false %>
+        <div class="form">
+            <%= form_for @course, url: {:action => 'submit_new_course'}, method: :post do |f| %>
+                
+                <%= render 'courses/form', f: f, preview_image: false %>
 
-            <div style="margin-top: 10px;">
-                <% unless flash[:new_article_errors].nil? %>
-                    <% flash[:new_article_errors].each do |e| %>
-                        <div class="form_error_list">
-                            <div class="item"><%= e %></div>
-                        </div>
+                <div style="margin-top: 10px;">
+                    <% unless flash[:new_course_errors].nil? %>
+                        <% flash[:new_course_errors].each do |e| %>
+                            <div class="form_error_list">
+                                <div class="item"><%= e %></div>
+                            </div>
+                        <% end %>
                     <% end %>
-                <% end %>
-            </div>
+                </div>
 
-            <div style="margin-top: 10px;">
-                <% unless flash[:new_course_errors].nil? %>
-                    <% flash[:new_course_errors].each do |e| %>
-                        <div class="form_error_list">
-                            <div class="item"><%= e %></div>
-                        </div>
-                    <% end %>
-                <% end %>
-            </div>
+                <div style="margin-bottom: 10px;">
+                    <%= render 'layouts/grecaptcha' %>
+                </div>
 
-            <div style="margin-bottom: 10px;">
-				<%= render 'layouts/grecaptcha' %>
-			</div>
-
-            <div style="width: 100%; display: block; text-align: left;">
-                <%= f.submit 'ثبت دوره', :class => "btn btn-primary btn-large-padding", data: { disable_with: "درحال ارسال فرم" } %>
-            </div>
-        <% end %>
-    </div>
+                <div style="width: 100%; display: block; text-align: left;">
+                    <%= f.submit 'ثبت دوره', :class => "btn btn-primary btn-large-padding", data: { disable_with: "درحال ارسال فرم" } %>
+                </div>
+            <% end %>
+        </div>
+    <% else %>
+        created
+    <% end %>
 </div>
