course create design finishd. working on verify courses

--- a/app/assets/stylesheets/side_bar.scss
+++ b/app/assets/stylesheets/side_bar.scss
@@ -7,6 +7,7 @@ $panel_width: 300px;
     background: #fff;
     border-radius: 7px;
     box-shadow: 0px 0px 0px 5px rgba(255, 255, 255, 0.5);
+    margin-bottom: 50px;
     .covered_avatar{
         width: 100%;
         padding: 30px 10px;
