--- a/app/views/dashboard/new_course.html.erb
+++ b/app/views/dashboard/new_course.html.erb
@@ -27,6 +27,23 @@
             <% end %>
         </div>
     <% else %>
-        created
+        <div style="text-align: center">
+            <div style="width: 100%; display: block; margin-bottom: 10px;">
+                <%= image_tag '/images/videographer.svg', :style => 'width: 60%;', :alt => "mail error" %>
+            </div>
+
+            <span dir="rtl">
+                دوره آموزشی با موفقیت ثبت شد.
+                <br>
+                <% unless published %>
+                    و بعد از تایید موسس قابل مشاهده خواهد بود.
+                <% end %>
+            </span>
+
+            <div style="width: 100%; display: block; margin-top: 20px">
+            	<%= link_to "نمایش دوره", '#', :class => 'btn btn-primary' %>
+            	<%= link_to "ویدیو ها", '/courses/show/' + slug, :class => 'btn btn-primary btn-large-padding' %>
+        	</div>
+        </div>
     <% end %>
 </div>
