--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -30,12 +30,17 @@
 
                             <%= link_to 'مقاله جدید', dashboard_new_article_url, :class => 'link' %>
                             <%= link_to 'مقاله های من', dashboard_my_articles_url, :class => 'link' %>
-                            <%= link_to "مقاله های تایید نشده (#{@articles_that_not_verified_length})", dashboard_articles_that_not_verified_url, :class => 'link', :dir => :rtl%>
+                            <% if @user.is_owner? %>
+                                <%= link_to "مقاله های تایید نشده (#{@articles_that_not_verified_length})", dashboard_articles_that_not_verified_url, :class => 'link', :dir => :rtl%>
+                            <% end %>
                             
                             <div class="sepa"></div>
 
                             <%= link_to 'دوره جدید', dashboard_new_course_url, :class => 'link' %>
                             <%= link_to 'دوره های من', dashboard_new_article_url, :class => 'link' %>
+                            <% if @user.is_owner? %>
+                                <%= link_to "دوره های تایید نشده (#{@courses_that_not_verified_length})", dashboard_courses_that_not_verified_url, :class => 'link' %>
+                            <% end %>
 
                             <div class="sepa"></div>
 
